exports[`no-conflicting-modifiers > invalid(1): import {test, describe, it} from 'node:test';\ntest.skip.only(\"x\", () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test.skip.only("x", () => {});

`;

exports[`no-conflicting-modifiers > invalid(1): import {test, describe, it} from 'node:test';\ntest.skip.only(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test.skip.only("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(10): import {test, describe, it} from 'node:test';\ntest({name: \"x\", skip: true, only: true, fn() {}}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test({name: "x", skip: true, only: true, fn() {}});

`;

exports[`no-conflicting-modifiers > invalid(10): import {test, describe, it} from 'node:test';\ntest({name: \"x\", skip: true, only: true, fn() {}}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test({name: "x", skip: true, only: true, fn() {}});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(11): import {test, describe, it} from 'node:test';\ntest(\"x\", {\"skip\": true, only: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test("x", {"skip": true, only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(11): import {test, describe, it} from 'node:test';\ntest(\"x\", {\"skip\": true, only: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test("x", {"skip": true, only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(12): import * as nodeTest from 'node:test';\nnodeTest.test.skip.only(\"x\", () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.skip.only("x", () => {});

`;

exports[`no-conflicting-modifiers > invalid(12): import * as nodeTest from 'node:test';\nnodeTest.test.skip.only(\"x\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test.skip.only("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(13): import {test, describe, it} from 'node:test';\ntest.skip.only(\"x\", (): void => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test.skip.only("x", (): void => {});

`;

exports[`no-conflicting-modifiers > invalid(13): import {test, describe, it} from 'node:test';\ntest.skip.only(\"x\", (): void => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test.skip.only("x", (): void => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(14): import {test} from 'node:test';\ntest('p', async t => { await t.test('c', {skip: true, only: true}, () => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('c', {skip: true, only: true}, () => {}); });

`;

exports[`no-conflicting-modifiers > invalid(14): import {test} from 'node:test';\ntest('p', async t => { await t.test('c', {skip: true, only: true}, () => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('c', {skip: true, only: true}, () => {}); });
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(15): import {test, describe, it} from 'node:test';\ntest(\"x\", {todo: true, expectFailure: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test("x", {todo: true, expectFailure: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(15): import {test, describe, it} from 'node:test';\ntest(\"x\", {todo: true, expectFailure: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test("x", {todo: true, expectFailure: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`todo\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(16): import {test, describe, it} from 'node:test';\ntest.expectFailure(\"x\", {todo: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test.expectFailure("x", {todo: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(16): import {test, describe, it} from 'node:test';\ntest.expectFailure(\"x\", {todo: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test.expectFailure("x", {todo: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`todo\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(17): import {it} from 'node:test';\nit.todo(\"x\", {expectFailure: \"why\"}, () => {}); 1`] = `

  1 | import {it} from 'node:test';
  2 | it.todo("x", {expectFailure: "why"}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(17): import {it} from 'node:test';\nit.todo(\"x\", {expectFailure: \"why\"}, () => {}); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it.todo("x", {expectFailure: "why"}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`todo\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(18): import {describe} from 'node:test';\ndescribe(\"x\", {todo: true, expectFailure: \"why\"}, () => {}); 1`] = `

  1 | import {describe} from 'node:test';
  2 | describe("x", {todo: true, expectFailure: "why"}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(18): import {describe} from 'node:test';\ndescribe(\"x\", {todo: true, expectFailure: \"why\"}, () => {}); 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | describe("x", {todo: true, expectFailure: "why"}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`todo\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(19): import {test} from 'node:test';\ntest('a', {expectFailure: 0, skip: true}, () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', {expectFailure: 0, skip: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(19): import {test} from 'node:test';\ntest('a', {expectFailure: 0, skip: true}, () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('a', {expectFailure: 0, skip: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(2): import {test, describe, it} from 'node:test';\nit.only.skip(\"x\", () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | it.only.skip("x", () => {});

`;

exports[`no-conflicting-modifiers > invalid(2): import {test, describe, it} from 'node:test';\nit.only.skip(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | it.only.skip("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(20): import {test} from 'node:test';\ntest('a', {skip: 0, only: true}, () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', {skip: 0, only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(20): import {test} from 'node:test';\ntest('a', {skip: 0, only: true}, () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('a', {skip: 0, only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(21): import {test} from 'node:test';\ntest('a', {skip: null, only: true}, () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', {skip: null, only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(21): import {test} from 'node:test';\ntest('a', {skip: null, only: true}, () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('a', {skip: null, only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(22): import {test} from 'node:test';\ntest('a', {skip: '', only: true}, () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', {skip: '', only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(22): import {test} from 'node:test';\ntest('a', {skip: '', only: true}, () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('a', {skip: '', only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(3): import {test, describe, it} from 'node:test';\ntest(\"x\", {skip: true, only: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test("x", {skip: true, only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(3): import {test, describe, it} from 'node:test';\ntest(\"x\", {skip: true, only: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test("x", {skip: true, only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(4): import {expectFailure} from 'node:test';\nexpectFailure(\"x\", {skip: true}, () => {}); 1`] = `

  1 | import {expectFailure} from 'node:test';
  2 | expectFailure("x", {skip: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(4): import {expectFailure} from 'node:test';\nexpectFailure(\"x\", {skip: true}, () => {}); 2`] = `

Message:
  1 | import {expectFailure} from 'node:test';
> 2 | expectFailure("x", {skip: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(5): import {test, describe, it} from 'node:test';\ntest(\"x\", {expectFailure: true, skip: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test("x", {expectFailure: true, skip: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(5): import {test, describe, it} from 'node:test';\ntest(\"x\", {expectFailure: true, skip: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test("x", {expectFailure: true, skip: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`expectFailure\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(6): import {test, describe, it} from 'node:test';\ntest(\"x\", {skip: \"later\", only: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test("x", {skip: "later", only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(6): import {test, describe, it} from 'node:test';\ntest(\"x\", {skip: \"later\", only: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test("x", {skip: "later", only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(7): import {test, describe, it} from 'node:test';\ntest.skip(\"x\", {only: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test.skip("x", {only: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(7): import {test, describe, it} from 'node:test';\ntest.skip(\"x\", {only: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test.skip("x", {only: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(8): import {test, describe, it} from 'node:test';\ntest(\"x\", {only: true, skip: true, todo: true}, () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | test("x", {only: true, skip: true, todo: true}, () => {});

`;

exports[`no-conflicting-modifiers > invalid(8): import {test, describe, it} from 'node:test';\ntest(\"x\", {only: true, skip: true, todo: true}, () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | test("x", {only: true, skip: true, todo: true}, () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`, \`todo\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;

exports[`no-conflicting-modifiers > invalid(9): import {test, describe, it} from 'node:test';\ndescribe.skip.only(\"s\", () => {}); 1`] = `

  1 | import {test, describe, it} from 'node:test';
  2 | describe.skip.only("s", () => {});

`;

exports[`no-conflicting-modifiers > invalid(9): import {test, describe, it} from 'node:test';\ndescribe.skip.only(\"s\", () => {}); 2`] = `

Message:
  1 | import {test, describe, it} from 'node:test';
> 2 | describe.skip.only("s", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting modifiers \`only\`, \`skip\`. \`node:test\` resolves them by precedence rather than reporting both: \`skip\` wins over everything, and \`todo\` wins over \`expectFailure\`.

`;
